--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v0.1.2:
+  date: 2014-04-18
+  changes:
+    - always use readable-stream for consistency.
+    - use crc32.unsigned to get digest.
 v0.1.1:
   date: 2014-03-30
   changes:
