--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.2.0:
+  date: 2014-05-03
+  changes:
+    - add size method to return raw size of data passed-through.
 v0.1.2:
   date: 2014-04-18
   changes:
